# 3DFeatProbe

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: README.md  calibration_benchmark.yaml  default_config.yaml  dense_n_view_benchmark.yaml  multiview_correspondence_benchmark.yaml  train_vggt.yaml  visualize_feats.yaml
configs/dataset/: benchmark_calibration.yaml  benchmark_dense_n_view.yaml  benchmark_multiview_correspondence.yaml  benchmark_n_view_recon.yaml  default.yaml  multi_dataset.yaml  multi_dataset_train.yaml  visualize_feats.yaml
configs/dataset/blendedmvs/: default.yaml
configs/dataset/eth3d/: default.yaml
configs/dataset/mpsd/: default.yaml
configs/dataset/mvs_synth/: default.yaml
configs/dataset/resolution/: default.yaml
configs/dataset/scannetppv2/: default.yaml
configs/dataset/unrealstereo4k/: default.yaml
configs/machine/: default.yaml  local.yaml
configs/model/: default.yaml  dinov2.yaml  dinov3.yaml  feature_extractor.yaml  mum.yaml  vggt.yaml  vggt_feature.yaml
configs/training/: checkpoint.yaml  default.yaml  logging.yaml  resolution.yaml  vggt.yaml
configs/training/checkpoint/: default.yaml
configs/training/distributed/: default.yaml
configs/training/logging/: default.yaml
configs/training/loss/: default.yaml
configs/training/optim/: default.yaml
configs/training/resolution/: default.yaml
scripts/eval/: calibration_benchmark.py  dense_n_view_benchmark.py  multiview_correspondence_benchmark.py  visualize_feats.py
scripts/training/: train_vggt.py
src/datasets/: __init__.py  base_dataset.py  wai_dataset.py
src/eval/: benchmark.py  dense_n_view.py  metrics.py  multiview_correspondence.py  single_view_calibration.py  vis_feats.py
src/models/: README.md  __init__.py  clip.py  dino.py  mae.py  siglip.py  utils.py  vggt.py
src/models/backbones/: __init__.py  base.py  clip.py  dino.py  mae.py  mum.py  siglip.py
src/models/feature_extractors/: __init__.py  base.py  clip.py  dino.py  mae.py  mum.py  vggt.py
src/models/processors/: __init__.py  base_processor.py
src/training/: distributed.py  gradient_clip.py  logging.py  optimizer.py  utils.py
src/training/losses/: multitask_loss.py
src/training/trainers/: __init__.py  trainer.py  vggt_trainer.py
src/utils/: camera.py  image_utils.py  io.py  logging.py
test/: debug-video-lengths.json  test_correspondence.py  test_models.py
